Fix camera page status not showing bug

--- a/src/rubintv/static/stylesheets/main.sass
+++ b/src/rubintv/static/stylesheets/main.sass
@@ -429,10 +429,10 @@ section
 		height: 50px
 		width: 50px
 		background-image: none
-	&.active
-		background-image: none
-	&.stopped
-		background-image: url(/rubintv/static/images/heartbeat_channel_stopped.svg)
+.channel.active .heartbeat
+	background-image: none
+.channel.stopped .heartbeat
+	background-image: url(/rubintv/static/images/heartbeat_channel_stopped.svg)
 
 .metadata-status
 	.heartbeat
